@@ -64,13 +64,32 @@ subprojects {
     }
 
     pluginManager.withPlugin("java") {
+        configurations {
+            mockitoAgent
+        }
+
         dependencies {
             testImplementation("org.awaitility:awaitility")
             testImplementation("org.junit.jupiter:junit-jupiter")
+
             testImplementation("org.mockito:mockito-junit-jupiter")
+            mockitoAgent("org.mockito:mockito-core") {
+                transitive = false
+            }
 
             testRuntimeOnly("org.junit.platform:junit-platform-launcher")
             testRuntimeOnly("org.slf4j:slf4j-simple")
+        }
+
+        // tasks.withType<Test> {
+        //     jvmArgs("-XX:+EnableDynamicAgentLoading")
+        // }
+        test {
+            doFirst {
+                jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
+                // jvmArgs += "-Xshare:off"
+                // jvmArgs += "-XX:+EnableDynamicAgentLoading"
+            }
         }
     }
 }
